refactor: unified Path-based service API with output file registration in consumer